<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:verticalScrollbarPosition="right"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/constraintLayoutEditReadings"-->
        <!--android:layout_width="344dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--tools:layout_editor_absoluteY="0dp"-->
        <!--tools:layout_editor_absoluteX="8dp">-->

        <!-- Creates margins for the sides -->
        <android.support.constraint.Guideline
            android:id="@+id/guideLeftMargin"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.05"
            tools:layout_editor_absoluteY="25dp"
            tools:layout_editor_absoluteX="18dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideRightMargin"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.95"
            tools:layout_editor_absoluteY="25dp"
            tools:layout_editor_absoluteX="342dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideTopMargin"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.0"
            tools:layout_editor_absoluteY="25dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideBottomMargin"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.95"
            tools:layout_editor_absoluteY="242dp"
            tools:layout_editor_absoluteX="0dp" />

        <!-- Guideline for the EditTexts -->
        <android.support.constraint.Guideline
            android:id="@+id/guideEditStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33"
            tools:layout_editor_absoluteY="25dp"
            tools:layout_editor_absoluteX="119dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideEditEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"
            tools:layout_editor_absoluteY="25dp"
            tools:layout_editor_absoluteX="324dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideEditReadingTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.47"
            tools:layout_editor_absoluteY="132dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideEditReadingBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"
            tools:layout_editor_absoluteY="219dp"
            tools:layout_editor_absoluteX="0dp" />

        <!-- textviews -->
        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readingTitle"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideLeftMargin"
            app:layout_constraintTop_toTopOf="@+id/guideTopMargin" />

        <TextView
            android:id="@+id/lblAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readingAuthor"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/lblTitle"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideLeftMargin" />

        <TextView
            android:id="@+id/lblPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readingPart"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/lblAuthor"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideLeftMargin" />

        <TextView
            android:id="@+id/lblText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readingText"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/lblPart"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideLeftMargin" />

        <!-- Edit Texts -->
        <EditText
            android:id="@+id/editTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/titleHint"
            android:textAlignment="center"
            app:layout_constraintRight_toLeftOf="@+id/guideEditEnd"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideEditStart"
            app:layout_constraintTop_toTopOf="@+id/guideTopMargin" />

        <EditText
            android:id="@+id/editAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/authorHint"
            app:layout_constraintRight_toLeftOf="@+id/guideEditEnd"
            app:layout_constraintTop_toBottomOf="@+id/editTitle"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@+id/guideEditStart" />

        <EditText
            android:id="@+id/editPart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/partHint"
            android:textAlignment="center"
            app:layout_constraintRight_toLeftOf="@+id/guideEditEnd"
            app:layout_constraintTop_toBottomOf="@+id/editAuthor"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideEditStart" />

        <!-- larger EditText for the readings -->
        <EditText
            android:id="@+id/editReading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:lines="25"
            android:gravity="start"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:background="@drawable/border"
            app:layout_constraintTop_toBottomOf="@+id/lblText"
            app:layout_constraintBottom_toTopOf="@+id/guideEditReadingBottom"
            app:layout_constraintRight_toLeftOf="@+id/guideRightMargin"
            app:layout_constraintLeft_toLeftOf="@+id/guideLeftMargin" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitReading"
            android:onClick="addReading"
            app:layout_constraintBottom_toTopOf="@+id/guideBottomMargin"
            app:layout_constraintRight_toLeftOf="@+id/guideRightMargin"
            app:layout_constraintLeft_toLeftOf="@+id/guideLeftMargin"
            app:layout_constraintTop_toBottomOf="@id/editReading"
            android:layout_marginBottom="20dp"/>

    <!--</android.support.constraint.ConstraintLayout>-->

</android.support.constraint.ConstraintLayout>
